Removing "Powered by headers"

--- a/web.config
+++ b/web.config
@@ -44,11 +44,16 @@
 	    <error statusCode="403" subStatusCode="4" path="https://www.teammentor.net" responseMode="Redirect" />
          </httpErrors>
     <security>
-        <requestFiltering allowDoubleEscaping="true"/>
+        <requestFiltering allowDoubleEscaping="true" />
     </security>
+        <httpProtocol>
+            <customHeaders>
+                <remove name="X-Powered-By" />
+            </customHeaders>
+        </httpProtocol>
     </system.webServer>
     <system.web>
          <httpRuntime requestPathInvalidCharacters="%,&amp;,\,?" />
-         <customErrors mode="RemoteOnly" defaultRedirect="https://www.teammentor.net/error"/>
+         <customErrors mode="RemoteOnly" defaultRedirect="https://www.teammentor.net/error" />
     </system.web>
 </configuration>
